Fix visual bug with list items Resolved issue where list items overlapped at higher resolutions, causing gray squares to appear to the right of each item.

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -14,11 +14,14 @@
     width:50%;
     padding: 0vh 0px 0px 0px;
     margin-bottom: 1rem;
+
+    
 }
 .hero__list-item{
     flex: 1 1 100%;
     font-size:.9rem;
     list-style: none;
+    overflow: hidden;
 }
 .hero__paragraph{
     font-size: 4rem;
