--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -43,6 +43,7 @@
     text-align: left;
     margin-left: auto;
     margin-right:2rem;
+    overflow:hidden;
 }
 @media (max-width: 750px) {
     .nav {
